--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Joel Palacio",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
